[package]
name = "platerflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
indicatif = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.136"
toml = "0.5.8"
exitcode = "1.1.2"
glob = "0.3.0"