[package]
name = "platerflow"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.2.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.136"
toml = "0.5.8"
exitcode = "1.1.2"
glob = "0.3.0"
num_cpus = "1.13.1"
ureq = "2.4.0"